FIX: Remove spacing from literal translations

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -218,6 +218,11 @@
     margin-block: 0em;
   }
 
+  .lit, .literal {
+    margin : 0em;
+    padding: 0em;
+  }
+
   .morphemes,
   .words {
     display:             flex;
